--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.21.0",
+    "fabric": "^5.2.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.52.3"
+    "sass": "^1.52.3",
+    "swiper": "^8.2.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
+    "@types/fabric": "^4.5.8",
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
