--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.52.3",
-    "swiper": "^8.2.4"
+    "sass": "^1.52.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
